# memory-decay-core

./: .gitignore  AGENT-DIARY-KR.md  AGENT-DIARY.md  LICENSE  MEMORYBENCH_GUIDE.md  README.md  REPORT.md  SECURITY_ANALYSIS.md  TASK.md  program.md  pyproject.toml  research_report.ipynb  research_report_ko.ipynb  run_ce_sweep.py  run_ce_sweep2.py
.claude/memento/: metrics.json
.factory/: init.sh  services.yaml
cache/: dataset.json  rehearsal_targets.json  test_queries.json
dashboard/: app.py  charts.py  data_loader.py  output_loader.py
data/: auto_improvement_results.json  baseline_50.json  calibrated_50.json  comparison_results.json  comparison_results_416.json  comparison_results_korean_emb.json  human_reviews_smoke.jsonl  longmemeval.jsonl  memories_50.jsonl  memories_500.jsonl  test_50.jsonl  test_500.jsonl
docs/: convergence-summary-2026-03-19.md  current-analysis.md  final-report.md  research-log.md
experiments/: best  history.jsonl  strict_eval.py
memory_chain/: breakthrough_analysis.md  codex_review.md  failure_patterns.md  memory_index.jsonl  round_0000.md  round_0001.md  round_0002.md  round_0003.md  round_0004.md  round_0005.md  round_0006.md  round_0007.md  round_0008.md  round_0009.md  round_0010.md  round_0012.md  round_0013.md  round_0014.md  round_0015.md  round_0016.md  round_0017.md  round_0018.md  round_0019.md  round_0023.md  round_0028.md  round_0031.md  round_0032.md  round_0034.md  round_0041.md  round_0042.md  round_0043.md  round_0099.md  round_latest.md
outputs/: eval_v2_summary.json
scripts/: auto_research.py  auto_research_v2.py  backfill_memory_chain.py  build_cache_from_texts.py  build_memorybench_cache.py  check_search_surface.py  convert_longmemeval.py  enrich_associations.py  gen_500.py  plot_node_trace.py  re_eval.py  re_eval_no_strict.py  run_auto_improve.py  run_bench_loop.py  run_eval_v2_baseline.py  run_multi_seed_validation.py  run_pre_program_pipeline.py  run_self_research.py  upload_to_gdocs.py  visualize.py  visualize_analysis.py
tests/: conftest.py  test_activation_history.py  test_auto_improver.py  test_auto_research.py  test_bench_bridge.py  test_bench_evaluator_cache.py  test_bm25.py  test_build_memorybench_cache.py  test_cache_builder.py  test_calibration_pipeline.py  test_convert_longmemeval.py  test_core.py  test_cross_validator.py  test_dashboard.py  test_dashboard_pipeline_outputs.py  test_data_gen.py  test_decay_sqlite.py  test_embedding_provider.py  test_eval_set_builder.py  test_eval_v2_gate.py  test_eval_v2_summary.py  test_evaluator_breakthrough.py  test_evaluator_correlation.py  test_evaluator_precision.py  test_evaluator_query_cache.py  test_evaluator_selectivity.py  test_evaluator_temporal.py  test_feedback_endpoint.py  test_feedback_store.py  test_graph_temporal.py  test_human_data.py  test_human_eval.py  test_human_optimizer.py  test_human_runner.py  test_human_split.py  test_human_to_synthetic_bridge.py  test_hypothesis_generator.py  test_memory_store.py  test_multi_runner.py  test_persistence.py  (+6 more)
(+2559 files in other folders)
